added more meetups

--- a/src/views/burgers.ejs
+++ b/src/views/burgers.ejs
@@ -446,7 +446,6 @@
   </div>
 </div>
 <div id="chart-pig-and-whistle"></div>
-</div>
               <div class="burgers__section">
   <h2 class="burgers__name">Tio pepe</h2>
   <div class="burgers__resturant-street">Södra Torggatan 1</div>
@@ -464,9 +463,60 @@
   </div>
 </div>
 <div id="chart-tio-pepe"></div>
+                <div class="burgers__section">
+  <h2 class="burgers__name">Ester</h2>
+  <div class="burgers__resturant-street">Norra Torggatan 4</div>
+  <img data-js="load-on-scroll" class="burgers__img" data-src="/2018-02-01-burgare.webp" alt="burger">
+  <img data-js="load-on-scroll" class="burgers__img" data-src="/2018-02-01-gubbar.webp" alt="men">
+  <img data-js="load-on-scroll" class="burgers__img" data-src="/2018-02-01-gubbar2.webp" alt="men">
+  <img data-js="load-on-scroll" class="burgers__img" data-src="/2018-02-01-gubbar3.webp" alt="men">
+  <div class="burgers__rating burgers__rating--6">
+    <img data-js="load-on-scroll" data-src="/logo.svg" alt="logo">
+    <img data-js="load-on-scroll" data-src="/logo.svg" alt="logo">
+    <img data-js="load-on-scroll" data-src="/logo.svg" alt="logo">
+    <img data-js="load-on-scroll" data-src="/logo.svg" alt="logo">
+    <img data-js="load-on-scroll" data-src="/logo.svg" alt="logo">
+    <img data-js="load-on-scroll" data-src="/logo_faded.svg" alt="logo">
+  </div>
 </div>
+<div id="ester"></div>
+                  <div class="burgers__section">
+  <h2 class="burgers__name">Burgersson</h2>
+  <div class="burgers__resturant-street">Skanstorget 4</div>
+  <img data-js="load-on-scroll" class="burgers__img" data-src="/2018-03-02-burgare.webp" alt="burger">
+  <img data-js="load-on-scroll" class="burgers__img" data-src="/2018-03-02-gubbar.webp" alt="men">
+  <img data-js="load-on-scroll" class="burgers__img" data-src="/2018-03-02-gubbar2.webp" alt="men">
+  <div class="burgers__rating burgers__rating--6">
+    <img data-js="load-on-scroll" data-src="/logo.svg" alt="logo">
+    <img data-js="load-on-scroll" data-src="/logo.svg" alt="logo">
+    <img data-js="load-on-scroll" data-src="/logo.svg" alt="logo">
+    <img data-js="load-on-scroll" data-src="/logo.svg" alt="logo">
+    <img data-js="load-on-scroll" data-src="/logo_faded.svg" alt="logo">
+    <img data-js="load-on-scroll" data-src="/logo_faded.svg" alt="logo">
+  </div>
+</div>
+<div id="burgersson"></div>
+                    <div class="burgers__section">
+  <h2 class="burgers__name">Mr Döner</h2>
+  <div class="burgers__resturant-street">Gottskärsvägen 2</div>
+  <img data-js="load-on-scroll" class="burgers__img" data-src="/2018-03-29-burgare.webp" alt="burger">
+  <img data-js="load-on-scroll" class="burgers__img" data-src="/2018-03-29-gubbar.webp" alt="men">
+  <img data-js="load-on-scroll" class="burgers__img" data-src="/2018-03-29-gubbar2.webp" alt="men">
+  <img data-js="load-on-scroll" class="burgers__img" data-src="/2018-03-29-gubbar3.webp" alt="men">
+  <img data-js="load-on-scroll" class="burgers__img" data-src="/2018-03-29-gubbar4.webp" alt="men">
+  <img data-js="load-on-scroll" class="burgers__img" data-src="/2018-03-29-gubbar5.webp" alt="men">
+  <div class="burgers__rating burgers__rating--6">
+    <img data-js="load-on-scroll" data-src="/logo.svg" alt="logo">
+    <img data-js="load-on-scroll" data-src="/logo.svg" alt="logo">
+    <img data-js="load-on-scroll" data-src="/logo.svg" alt="logo">
+    <img data-js="load-on-scroll" data-src="/logo_faded.svg" alt="logo">
+    <img data-js="load-on-scroll" data-src="/logo_faded.svg" alt="logo">
+    <img data-js="load-on-scroll" data-src="/logo_faded.svg" alt="logo">
+  </div>
+</div>
+<div id="mr-doner"></div>
         </div>
     </div>
-  <script type="text/javascript" src="/runtime.js"></script><script type="text/javascript" src="/vendor.js"></script><script type="text/javascript" src="/main.js"></script><script type="text/javascript" src="/burgers.js"></script></body>
+  <script type="text/javascript" src="/runtime.js"></script><script type="text/javascript" src="/vendor.js"></script><script type="text/javascript" src="/burgers.js"></script><script type="text/javascript" src="/main.js"></script></body>
 
 </html>
