--- a/src/views/partials/burgersson.ejs
+++ b/src/views/partials/burgersson.ejs
@@ -1,9 +1,9 @@
 <div class="burgers__section">
-  <h2 class="burgers__name">The pig &amp; Whistle</h2>
-  <div class="burgers__resturant-street">Gibraltargatan 80</div>
-  <img data-js="load-on-scroll" class="burgers__img" data-src="/2018-01-11-burgare3.webp" alt="burger">
-  <img data-js="load-on-scroll" class="burgers__img" data-src="/2018-01-11-burgare4.webp" alt="burger">
-  <img data-js="load-on-scroll" class="burgers__img" data-src="/2018-01-11-gubbar3.webp" alt="men">
+  <h2 class="burgers__name">Burgersson</h2>
+  <div class="burgers__resturant-street">Skanstorget 4</div>
+  <img data-js="load-on-scroll" class="burgers__img" data-src="/2018-03-02-burgare.webp" alt="burger">
+  <img data-js="load-on-scroll" class="burgers__img" data-src="/2018-03-02-gubbar.webp" alt="men">
+  <img data-js="load-on-scroll" class="burgers__img" data-src="/2018-03-02-gubbar2.webp" alt="men">
   <div class="burgers__rating burgers__rating--6">
     <img data-js="load-on-scroll" data-src="/logo.svg" alt="logo">
     <img data-js="load-on-scroll" data-src="/logo.svg" alt="logo">
@@ -13,4 +13,4 @@
     <img data-js="load-on-scroll" data-src="/logo_faded.svg" alt="logo">
   </div>
 </div>
-<div id="chart-pig-and-whistle"></div>
+<div id="burgersson"></div>
