--- a/src/views/templates/burgers.template.ejs
+++ b/src/views/templates/burgers.template.ejs
@@ -12,6 +12,9 @@
           <% include ./src/views/partials/@burger %>
             <% include ./src/views/partials/pig_and_whistle %>
               <% include ./src/views/partials/tio_pepe %>
+                <% include ./src/views/partials/ester %>
+                  <% include ./src/views/partials/burgersson %>
+                    <% include ./src/views/partials/mr_doner %>
         </div>
     </div>
   </body>
