--- a/src/views/burgers.ejs
+++ b/src/views/burgers.ejs
@@ -342,8 +342,8 @@
       fill: #fff;
     }
 
-    .c3-chart-arcs-title {
-      font-size: 4em;
+    .c3-axis * {
+      stroke: #fff !important;
     }
   </style>
   <link rel="apple-touch-icon" sizes="57x57" href="/apple-icon-57x57.png">
@@ -411,6 +411,7 @@
   <div class="menu__click-catcher" data-js="menu-click-catcher"></div>
 </aside>
         <div class="burgers">
+          <div id="comparison"></div>
           <div class="burgers__section">
   <h2 class="burgers__name">@Burger</h2>
   <div class="burgers__resturant-street">Storgatan 25</div>
