--- a/src/public/css/main.css
+++ b/src/public/css/main.css
@@ -262,6 +262,6 @@ ul {
 .c3-chart-arcs-title, .c3-legend-item {
   fill: #fff;
 }
-.c3-chart-arcs-title {
-  font-size: 4em;
+.c3-axis * {
+  stroke: #fff !important;
 }
