--- a/src/views/members.ejs
+++ b/src/views/members.ejs
@@ -342,8 +342,8 @@
       fill: #fff;
     }
 
-    .c3-chart-arcs-title {
-      font-size: 4em;
+    .c3-axis * {
+      stroke: #fff !important;
     }
   </style>
   <link rel="apple-touch-icon" sizes="57x57" href="/apple-icon-57x57.png">
