--- a/src/views/burgers.ejs
+++ b/src/views/burgers.ejs
@@ -411,7 +411,8 @@
   <div class="menu__click-catcher" data-js="menu-click-catcher"></div>
 </aside>
         <div class="burgers">
-          <div id="comparison"></div>
+          <h1 class="resturants">Resturanger</h1>
+          <div id="total"></div>
           <div class="burgers__section">
   <h2 class="burgers__name">@Burger</h2>
   <div class="burgers__resturant-street">Storgatan 25</div>
