--- a/src/public/css/main.css
+++ b/src/public/css/main.css
@@ -3,50 +3,63 @@
   margin: 0;
   box-sizing: border-box;
 }
- :root {
+
+:root {
   background: #323030;
   color: #fff;
   line-height: 21px;
   letter-spacing: 1px;
   font-family: 'Roboto', sans-serif;
 }
+
 #root {
   margin: 0 auto;
 }
+
 img {
   max-width: 100%;
 }
-h1, h2 {
+
+h1,
+h2 {
   font-size: 20px;
 }
+
 a {
   text-decoration: none;
   color: none;
 }
+
 p {
   font-size: 18px;
   font-family: 'Roboto-Light', sans-serif;
 }
+
 button {
   background: none;
   border: none;
   outline-color: #2296D2;
 }
+
 ul {
   list-style: none;
 }
+
 .title {
   position: absolute;
   top: 16px;
   right: 16px;
 }
+
 .section__link {
   color: #2296D2;
   font-weight: bold;
 }
+
 .section__link:hover {
   text-decoration: underline;
 }
+
 .menu {
   width: 100vw;
   height: 100vh;
@@ -57,6 +70,7 @@ ul {
   transition: all 200ms ease-in-out;
   transform: translate3D(-100vw, 0, 0);
 }
+
 .menu__list {
   width: 240px;
   height: 100vh;
@@ -64,24 +78,30 @@ ul {
   color: #fff;
   float: left;
 }
+
 .menu__list__click-catcher {
   width: 100%;
   height: 100%;
 }
+
 .menu__click-catcher {
   float: left;
   width: calc(100% - 240px);
   height: 100vh;
 }
+
 #menu-toggle {
   display: none;
 }
+
 #menu-toggle:checked+.menu {
   transform: translate3D(0, 0, 0);
 }
+
 .bold-text {
   font-weight: bold;
 }
+
 .section__image {
   width: 100%;
   object-fit: cover;
@@ -89,29 +109,37 @@ ul {
   opacity: 0;
   transition: all 0.3s;
 }
-.section__image.is-visible, .section__image.header-image {
+
+.section__image.is-visible,
+.section__image.header-image {
   opacity: 1;
 }
+
 .header-image {
   filter: blur(20px);
 }
+
 @media screen and (min-width: 321px) {
   .section__image {
     max-height: 800px;
   }
 }
+
 .section__title {
   text-align: center;
   margin-bottom: 4px;
 }
+
 .section__text {
   text-align: center;
 }
+
 .section__image-text-container {
   padding: 32px 16px;
   max-width: 500px;
   margin: 0 auto;
 }
+
 #menu-button {
   width: 44px;
   height: 44px;
@@ -123,52 +151,66 @@ ul {
   left: 8px;
   z-index: 2;
 }
+
 #menu-button.menu-button-background {
   opacity: 1;
   background: url(/menu_icon.svg);
 }
+
 .menu__ul {
   padding: 58px 0 0 16px;
 }
+
 .menu__li {
   padding-bottom: 16px;
 }
+
 .menu__link {
   display: flex;
   align-items: center;
 }
+
 .menu__link-text-container {
   padding-left: 8px;
   color: #fff;
 }
+
 .menu__h2 {
   font-size: 18px;
 }
+
 .menu__img {
   width: 44px;
 }
+
 .menu__text {
   font-size: 14px;
   font-family: 'Roboto-Light', sans-serif;
 }
+
 .schedule {
   margin: 76px auto;
   border-collapse: collapse;
 }
+
 .schedule__td {
   padding: 8px;
   font-size: 14px;
 }
+
 .schedule__td:first-child {
   border-right: 1px solid #fff;
   text-align: right;
 }
+
 .schedule__h2 {
   font-size: 18px;
 }
+
 .schedule__text {
   font-size: 14px;
 }
+
 .rules__p {
   text-align: center;
   margin: 76px auto;
@@ -176,63 +218,80 @@ ul {
   font-size: 18px;
   padding: 0 16px;
 }
+
 .rules__img {
   margin: 0 auto;
   width: 88px;
   display: block;
 }
+
 .structure {
   margin: 76px auto;
 }
+
 .structure__h2 {
   padding-bottom: 8px;
   font-size: 18px;
 }
+
 .structure__text {
   font-size: 14px;
 }
+
 .structure__section {
   margin: 32px auto;
   max-width: 500px;
   padding: 0 16px;
 }
+
 .members {
   margin: 76px auto;
 }
+
 .fidde {
-  background: #0f0c29;  /* fallback for old browsers */
-  background: -webkit-linear-gradient(to right, #24243e, #302b63, #0f0c29);  /* Chrome 10-25, Safari 5.1-6 */
-  background: linear-gradient(to right, #24243e, #302b63, #0f0c29); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-  
+  background: #0f0c29;
+  /* fallback for old browsers */
+  background: -webkit-linear-gradient(to right, #24243e, #302b63, #0f0c29);
+  /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to right, #24243e, #302b63, #0f0c29);
+  /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 }
+
 .members__section {
   padding: 16px;
 }
+
 .members__name {
   padding-left: 16px;
   font-size: 18px;
   text-align: center;
 }
+
 .members__title {
   font-size: 14px;
   padding-left: 16px;
   text-align: center;
 }
+
 .members__img {
   padding: 16px 0 64px;
   width: 100%;
 }
+
 .burgers {
   margin: 76px auto;
 }
+
 .burgers__name {
   padding-left: 16px;
   font-size: 18px;
 }
+
 .burgers__resturant-street {
   font-size: 14px;
   padding-left: 16px;
 }
+
 .burgers__img {
   max-height: 240px;
   object-fit: cover;
@@ -241,27 +300,40 @@ ul {
   opacity: 0;
   transition: all 0.3s;
 }
-.burgers__img.is-visible, .burgers__img.header-image {
+
+.burgers__img.is-visible,
+.burgers__img.header-image {
   opacity: 1;
 }
+
 @media screen and (min-width: 321px) {
   .burgers__img {
     max-height: 800px;
   }
 }
+
 .burgers__rating {
   padding: 0 0 16px;
   margin: 0 auto;
 }
+
 .burgers__rating--4 {
   width: 192px;
 }
+
 .burgers__rating--6 {
- width: 290px; 
+  width: 290px;
 }
-.c3-chart-arcs-title, .c3-legend-item {
+
+.resturants {
+  text-align: center;
+}
+
+.c3-chart-arcs-title,
+.c3-legend-item {
   fill: #fff;
 }
+
 .c3-axis * {
   stroke: #fff !important;
 }
