--- a/src/views/templates/burgers.template.ejs
+++ b/src/views/templates/burgers.template.ejs
@@ -9,7 +9,8 @@
     <div id="root">
       <% include ./src/views/partials/menu %>
         <div class="burgers">
-          <div id="comparison"></div>
+          <h1 class="resturants">Resturanger</h1>
+          <div id="total"></div>
           <% include ./src/views/partials/@burger %>
             <% include ./src/views/partials/pig_and_whistle %>
               <% include ./src/views/partials/tio_pepe %>
