--- a/src/views/templates/burgers.template.ejs
+++ b/src/views/templates/burgers.template.ejs
@@ -17,6 +17,7 @@
                 <% include ./src/views/partials/ester %>
                   <% include ./src/views/partials/burgersson %>
                     <% include ./src/views/partials/mr_doner %>
+                      <% include ./src/views/partials/butchers_market %>
         </div>
     </div>
   </body>
