--- a/src/views/members.ejs
+++ b/src/views/members.ejs
@@ -461,6 +461,6 @@
           </div>
         </div>
     </div>
-  <script type="text/javascript" src="/runtime.js"></script><script type="text/javascript" src="/vendor.js"></script><script type="text/javascript" src="/main.js"></script></body>
+  <script type="text/javascript" src="/runtime.0144937d5cefe13c21a8.bundle.js"></script><script type="text/javascript" src="/vendor.d23d98e5fa2ec7a0d738.bundle.js"></script><script type="text/javascript" src="/main.5311de2a55333e3e2172.bundle.js"></script></body>
 
 </html>
