--- a/src/views/burgers.ejs
+++ b/src/views/burgers.ejs
@@ -296,6 +296,7 @@
 
     .burgers__name {
       padding-left: 16px;
+      padding-top: 32px;
       font-size: 18px;
     }
 
@@ -535,6 +536,6 @@
 <div id="butchers-market"></div>
         </div>
     </div>
-  <script type="text/javascript" src="/runtime.0144937d5cefe13c21a8.bundle.js"></script><script type="text/javascript" src="/vendor.d23d98e5fa2ec7a0d738.bundle.js"></script><script type="text/javascript" src="/burgers.b51cb9567dae80920c4a.bundle.js"></script><script type="text/javascript" src="/main.5311de2a55333e3e2172.bundle.js"></script></body>
+  <script type="text/javascript" src="/runtime.js"></script><script type="text/javascript" src="/vendor.js"></script><script type="text/javascript" src="/burgers.js"></script><script type="text/javascript" src="/main.js"></script></body>
 
 </html>
