--- a/src/views/rules.ejs
+++ b/src/views/rules.ejs
@@ -296,6 +296,7 @@
 
     .burgers__name {
       padding-left: 16px;
+      padding-top: 32px;
       font-size: 18px;
     }
 
@@ -428,6 +429,6 @@
   <br> För att bli en Svåger krävs att du har deltagit i 3st Burgarträffar samt accepterat våra stadgar.
 </p>
     </div>
-  <script type="text/javascript" src="/runtime.0144937d5cefe13c21a8.bundle.js"></script><script type="text/javascript" src="/vendor.d23d98e5fa2ec7a0d738.bundle.js"></script><script type="text/javascript" src="/main.5311de2a55333e3e2172.bundle.js"></script></body>
+  <script type="text/javascript" src="/runtime.js"></script><script type="text/javascript" src="/vendor.js"></script><script type="text/javascript" src="/main.js"></script></body>
 
 </html>
