--- a/src/views/rules.ejs
+++ b/src/views/rules.ejs
@@ -296,12 +296,14 @@
 
     .burgers__name {
       padding-left: 16px;
-      padding-top: 32px;
+      padding-top: 86px;
+      text-align: center;
       font-size: 18px;
     }
 
     .burgers__resturant-street {
       font-size: 14px;
+      text-align: center;
       padding-left: 16px;
     }
 
@@ -429,6 +431,6 @@
   <br> För att bli en Svåger krävs att du har deltagit i 3st Burgarträffar samt accepterat våra stadgar.
 </p>
     </div>
-  <script type="text/javascript" src="/runtime.js"></script><script type="text/javascript" src="/vendor.js"></script><script type="text/javascript" src="/main.js"></script></body>
+  <script type="text/javascript" src="/runtime.ff0b81a273be18fb23d3.bundle.js"></script><script type="text/javascript" src="/vendor.d23d98e5fa2ec7a0d738.bundle.js"></script><script type="text/javascript" src="/main.958e0377dad4e42216a2.bundle.js"></script></body>
 
 </html>
